--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 <h1>Agences</h1>
+<a href="{{ path('ajouterAgence') }}" >Ajouter</a>
+
 <table class="table table-striped table-hover">
    <thead>
         <tr>
@@ -21,7 +23,9 @@
             <td>{{agence.nom}}</td>
             <td>{{agence.telAgence}}</td>
             <td>{{agence.adresseVille}}</td>
-            <td>{{agence.actions}}</td>
+            <td><a href="{{ path('consulterAgence',{'id':agence.id}) }}" >voir</a>
+                <a href="{{ path('modifierAgence',{'id':agence.id}) }}" >modifier</a>
+                <a href="{{ path('supprimerAgence',{'id':agence.id}) }}" >supprimer</a></td>
 
            
 
@@ -30,6 +34,8 @@
 </table>
 
 <h1>Voitures</h1>
+<a href="{{ path('ajouterVoiture') }}" >Ajouter</a>
+
 <table class="table table-striped table-hover">
    <thead>
         <tr>
@@ -51,7 +57,9 @@
              <td>{{voiture.description}}</td>
             <td>{{voiture.nommbreDePlaces}}</td>
             <td>{{voiture.nomAgence}}</td>
-            <td>{{voiture.actions}}</td>
+            <td><a href="{{ path('consulterVoiture',{'id':voiture.id}) }}" >voir</a>
+                <a href="{{ path('modifierVoiture',{'id':voiture.id}) }}" >modifier</a>
+                <a href="{{ path('supprimerVoiture',{'id':voiture.id}) }}" >supprimer</a></td>
 
            
 
