--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -55,8 +55,8 @@
             <td>{{voiture.marque}}</td>
             <td>{{voiture.couleur}}</td>
              <td>{{voiture.description}}</td>
-            <td>{{voiture.nommbreDePlaces}}</td>
-            <td>{{voiture.nomAgence}}</td>
+            <td>{{voiture.NbrPlace}}</td>
+            <td>{{voiture.agence}}</td>
             <td><a href="{{ path('consulterVoiture',{'id':voiture.id}) }}" >voir</a>
                 <a href="{{ path('modifierVoiture',{'id':voiture.id}) }}" >modifier</a>
                 <a href="{{ path('supprimerVoiture',{'id':voiture.id}) }}" >supprimer</a></td>
