--- a/templates/agence/consulterAgence.html.twig
+++ b/templates/agence/consulterAgence.html.twig
@@ -6,6 +6,27 @@
 <div class="container mx-2 mt-5 ">
     <h1 class="pt-20">consulter une agence</h1>
     <a href="{{ path('admin') }}" >page Admin</a>
+    <table class="table table-striped table-hover">
+   <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nom</th>
+            <th>Telephone Agence</th>
+            <th>Adresse Ville</th>
+        </tr>
+
+    </thead>
+
+        <tr>
+            <td>{{agence.id}}</td>
+            <td>{{agence.nom}}</td>
+            <td>{{agence.telagence}}</td>
+            <td>{{agence.adresse}} {{agence.ville}}</td>
+
+
+        </tr>
+
+</table>
    
     </div>
 {% endblock %}
