--- a/templates/voiture/ajouterVoiture.html.twig
+++ b/templates/voiture/ajouterVoiture.html.twig
@@ -5,6 +5,12 @@
 {% block body %}
 <div class="container mx-2 mt-5 ">
     <h1 class="pt-20">Ajouter une voiture</h1>
+      {{ form_start(form) }}
+          {{ form_widget(form) }} 
+         <div> <button type="submit" class="btn btn-success">Ajouter</button>   </div>
+  
+       {{ form_end(form) }}
+       
    <a href="{{ path('admin') }}" >page Admin</a>
     </div>
 {% endblock %}
