--- a/templates/voiture/consulterVoiture.html.twig
+++ b/templates/voiture/consulterVoiture.html.twig
@@ -8,4 +8,30 @@
       <a href="{{ path('admin') }}" >page Admin</a>
    
     </div>
+    <table class="table table-striped table-hover">
+   <thead>
+        <tr>
+            <th>ID</th>
+            <th>Marque</th>
+            <th>Matricule</th>
+            <th>Couleur</th>
+            <th>Description</th>
+            <th>Nombre de places</th>
+            <th>Nom agence</th>
+        </tr>
+
+    </thead>
+
+        <tr>
+            <td>{{voiture.id}}</td>
+            <td>{{voiture.marque}}</td>
+            <td>{{voiture.matricule}}</td>
+            <td>{{voiture.couleur}}</td>
+             <td>{{voiture.description}}</td>
+            <td>{{voiture.nbrplace}}</td>
+          <td>{{voiture.agence}}</td> 
+
+        </tr>
+
+</table>
 {% endblock %}
